--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,5 @@
 # #  Keys.
 # *-input_secrets.yaml
 
-# #  Specific files: original screen recording, to reduce possibilities of doxing.
-# vid-readme_frontpage_gif-01_original_footage.mp4
+#  Specific files: original screen recording, to reduce possibilities of doxing.
+vid-readme_frontpage_gif-01_original_footage.mp4
